Added Jake's details

--- a/jake_bickle.html
+++ b/jake_bickle.html
@@ -5,6 +5,8 @@
         <title>Hello, world!</title>
     </head>
     <body>
-
+        Jake Bickle
+        jbickle@pdx.edu
+        CS300
     </body>
 </html>
