Add more Jake info

--- a/jake_bickle.html
+++ b/jake_bickle.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         Jake Bickle
-        jbickle@pdx.edu
+        Age: 21
+        Favorite color: Purple
+        Favorite food: Pizza
+        Email: jbickle@pdx.edu
         CS300
     </body>
 </html>
