--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="RunningOutOfEnergy.js"></script>
         <script src="RunningOutOfSupplies.js"></script>
         <script src="SpaceCraftMovement.js"></script>
-        <script src="js/swapToPage.js"></script>
+        <script src="js/switchToPage.js"></script>
 
     </head>
 
