Removed updateUI from UI form

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                 <form name=UI>
                     STATUS
                     <p>Current Location:
-                    X <input type=text name=xValue size=4 onChange="updateUI()"> 
-                    Y <input type=text name=yValue size=4 onChange="updateUI()">
+                    X <input type=text name=xValue size=4> 
+                    Y <input type=text name=yValue size=4>
                     </p>
                     <p></p>
-                    <p>Energy <input type=text name=energy size=4 onChange="updateUI()">
-                    <p>Supplies <input type=text name=supplies size=4 onChange="updateUI()">%
+                    <p>Energy <input type=text name=energy size=4>
+                    <p>Supplies <input type=text name=supplies size=4>%
                     <p>
                     <hr>
                     MAKE A MOVE
-                    <p>Distance <input type=text name=distance size=4 onChange="updateUI()">
+                    <p>Distance <input type=text name=distance size=4>
                     <p>
                     <input type=button value="0" onclick="position.moveSpacecraft(0,distance.value)">
                     <input type=button value="90" onclick="position.moveSpacecraft(90,distance.value)">
