Changed "runningoutofenergy" and supplies to "Resources.js", added addEnergy/Supplies and subtractEnergy/Supplies

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <meta charset="utf-8">
 
         <script src="Sensors.js"></script>
-        <script src="RunningOutOfEnergy.js"></script>
-        <script src="RunningOutOfSupplies.js"></script>
+        <script src="Resources.js"></script>
         <script src="SpaceCraftMovement.js"></script>
         <script src="js/switchToPage.js"></script>
         <script src="js/config.js"></script>
@@ -29,7 +28,7 @@
                 <form name=UI>
                     STATUS
                     <p>Current Location:
-                    X <input type=text name=xValue size=4> 
+                    X <input type=text name=xValue size=4>
                     Y <input type=text name=yValue size=4>
                     </p>
                     <p></p>
