Created updateResources, linked to Energy and Supplies UI boxes

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     Y <input type=text name=yValue size=4>
                     </p>
                     <p></p>
-                    <p>Energy <input type=text name=energy size=4>
-                    <p>Supplies <input type=text name=supplies size=4>%
+                    <p>Energy <input type=text name=energy size=4 onChange="resources.updateResources()">
+                    <p>Supplies <input type=text name=supplies size=4 onChange="resources.updateResources()">%
                     <p>
                     <hr>
                     MAKE A MOVE
