Adjusted index.html to include a "Configure Artifacts" page in which any user can add planets, space stations and asteroids to the Map (represented as a global 2D array "Map" -- defined in initializeMap.js) at will.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <script src="SpaceCraftMovement.js"></script>
         <script src="js/switchToPage.js"></script>
         <script src="js/config.js"></script>
+        <script src="js/addArtifact.js"></script>
+        <script src="js/initializeMap.js"></script>
+        <script src="js/loadOptions.js"></script>
 
 
     </head>
@@ -52,7 +55,7 @@
                     <textarea id="log" cols="100" rows="10"></textarea>
                 </div>
             </div>
-            <div class="page" id="configuration" oninput=disableSubmitIfInvalid() onclick=disableSubmitIfInvalid()>
+            <div class="page" id="configuration" oninput=disableSubmitIfInvalid(); onclick=disableSubmitIfInvalid()>
                 <form name="configurationSelectors">
                     <div oninput=validateCoordinate("x")>
                         <input type="number" name="initialLocationX">
@@ -87,9 +90,44 @@
                     <input type="checkbox" name="staticWormholeBehavior">Static wormhole behavior
                     <br>
                     <input type=button value="Default" onclick=setConfigurationDefault()>
-                    <input id="configurationSubmitButton" type=button value="Done" onclick=switchToPage("mainMenu")>
+                    <input id="configurationSubmitButton" type=button value="Configure Artifacts" onclick=initializeMap()>
                 </form>
             </div>
+
+            <div class="page" id="artifactPlacement">
+                <input id="planetXLocation" type="number" name="planetXLocation" value="0" oninput=disablePlanetAdd()>Planet X<br>
+                <input id="planetYLocation" type="number" name="planetYLocation" value="0" oninput=disablePlanetAdd()>Planet Y<br>
+                <select id="planetType" name="planetType" oninput=disablePlanetAdd()>
+                    <option value="" disabled selected> Select Planet</option>
+                    <option value="Pentium 1">Pentium 1</option>
+                    <option value="Pentium 2">Pentium 2</option>
+                    <option value="Pentium 3">Pentium 3</option>
+                    <option value="Pentium 4">Pentium 4</option>
+                    <option value="Pentium 5">Pentium 5</option>
+                    <option value="Pentium 6">Pentium 6</option>
+                    <option value="Pentium 7">Pentium 7</option>
+                    <option value="Celeron">Celeron</option>
+                    <option value="Xeon">Xeon</option>
+                    <option value="Ryzen">Ryzen</option>
+                </select>
+                <input id="addPlanetButton" name="addPlanetButton" type="button" value="Add Planet" disabled onclick=addArtifact(planetXLocation.value,planetYLocation.value,planetType.value)><br>
+
+                <br>
+                <input id="stationXLocation" name="stationXLocation" type=number value="0" oninput=disableAddIfInvalid(stationXLocation.value,stationYLocation.value,"addSpaceStationButton")> Space Station X<br>
+                <input id="stationYLocation" name="stationYLocation" type=number value="0" oninput=disableAddIfInvalid(stationXLocation.value,stationYLocation.value,"addSpaceStationButton")> Space Station Y<br>
+                <input id="addSpaceStationButton" name="addSPaceStationButton" type="button" value="Add Space Station" onclick=addArtifact(stationXLocation.value,stationYLocation.value,"SpaceStation")>
+                <br>
+
+                <br>
+                <input id="asteroidXLocation" name="asteroidXLocation" type=number value="0" oninput=disableAddIfInvalid(asteroidXLocation.value,asteroidYLocation.value,"addAsteroidButton")> Asteroid X<br>
+                <input id="asteroidYLocation" name="asteroidYLocation" type=number value="0" oninput=disableAddIfInvalid(asteroidXLocation.value,asteroidYLocation.value,"addAsteroidButton")> Asteroid Y<br>
+                <input id="addAsteroidButton" name="addAsteroidButton" type="button" value="Add Asteroid" onclick=addArtifact(asteroidXLocation.value,asteroidYLocation.value,"Asteroid")>
+                <br>
+
+                <br>
+                <input id="artifactSubmitButton" name="artifactSubmitButton" type="button" value="Done" onclick=switchToPage("mainMenu")>
+            </div>
+
         </div>
     </body>
 </html>
