Add a "main" function to execute once the page is loaded

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         <script src="js/initializeMap.js"></script>
         <script src="js/loadOptions.js"></script>
 
+        <script src="js/main.js"></script>
 
     </head>
 
-    <body onload="initConfig()">
+    <body onload="main()">
         <div id="main">
             <h1>SpaceHunt</h1>
             <div class="page visible" id="mainMenu">
