--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="js/addArtifact.js"></script>
         <script src="js/initializeMap.js"></script>
         <script src="js/loadOptions.js"></script>
+        <script src="js/map.js"></script>
 
         <script src="js/main.js"></script>
 
@@ -30,7 +31,8 @@
                 </form>
             </div>
             <div class="page" id="mainGame">
-                <form name=UI>
+                <div id="map"></div>
+                <form id="UI" name=UI>
                     STATUS
                     <p>Current Location:
                     X <input type=text name=xValue size=4>
@@ -133,7 +135,7 @@
                 <input type="button" value="Back" onclick=switchToPage("configuration")>
                 <input id="artifactSubmitButton" name="artifactSubmitButton" type="button" value="Done" onclick=switchToPage("mainMenu")>
             </div>
-
         </div>
+    <!-- FOR MESSING AROUND ONLY -->
     </body>
 </html>
