Fix source files not being found

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <meta charset="utf-8">
 
 
-        <script src="Resources.js"></script>
-        <script src="Sensors.js"></script>
-        <script src="SpaceCraftMovement.js"></script>
+        <script src="js/Resources.js"></script>
+        <script src="js/Sensors.js"></script>
+        <script src="js/SpaceCraftMovement.js"></script>
         <script src="js/switchToPage.js"></script>
         <script src="js/config.js"></script>
         <script src="js/addArtifact.js"></script>
