Added gameOver() function

--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
                 <input type="button" value="Back" onclick=switchToPage("configuration")>
                 <input id="artifactSubmitButton" name="artifactSubmitButton" type="button" value="Done" onclick=switchToPage("mainMenu")>
             </div>
+            <div class="page" id="GameOver">
+                <h1>Game Over!</h1>
+            </div>
         </div>
     <!-- FOR MESSING AROUND ONLY -->
     </body>
