Added onload function "initGame()"

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <input type=button value="Configure" onclick=switchToPage("configuration")>
                 </form>
             </div>
-            <div class="page" id="mainGame">
+            <div class="page" id="mainGame" onload="initGame()">
                 <div id="map"></div>
                 <form id="UI" name=UI>
                     STATUS
