Add limit to how big initial energy, supplies, and credits may be

--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
                         Board height<span class="invalidInputMessage"></span>
                     </div>
                     <div class="numberField">
-                        <input type="number" name="initialEnergy" min=0>
+                        <input type="number" name="initialEnergy" min=0 max=10000>
                         Initial energy<span class="invalidInputMessage"></span>
                     </div>
                     <div class="numberField">
-                        <input type="number" name="initialSupplies" min=0>
+                        <input type="number" name="initialSupplies" min=0 max=10000>
                         Initial supplies<span class="invalidInputMessage"></span>
                     </div>
                     <div class="numberField">
-                        <input type="number" name="initialCredits" min=0>
+                        <input type="number" name="initialCredits" min=0 max=10000>
                         Initial credits<span class="invalidInputMessage"></span>
                     </div>
                     <input type="checkbox" name="godMode">God mode
