--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>SpaceHunt</h1>
             <div class="page visible" id="mainMenu">
                 <form name="menuButtons">
-                    <input type=button value="Start" onclick=switchToPage("mainGame")>
+                    <input type=button value="Start" onclick=switchToPage("mainGame"),position.initPosition()>
                     <input type=button value="Configure" onclick=switchToPage("configuration")>
                 </form>
             </div>
