Added commented out code to spacecraftmovement that organizes the buttons correctly

--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
                     <input type=button value="90" onclick="position.moveSpacecraft(90,distance.value)">
                     <input type=button value="180" onclick="position.moveSpacecraft(180,distance.value)">
                     <input type=button value="270" onclick="position.moveSpacecraft(270,distance.value)">
+                    <!-- The commented out code below organizes the buttons top-down-left-right. -->
+                    <!--
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type=button value="90" onclick="position.moveSpacecraft(90,distance.value)"><br>
+                    <input type=button value="180" onclick="position.moveSpacecraft(180,distance.value)">
+                    &nbsp;&nbsp;<input type=button value="0" onclick="position.moveSpacecraft(0,distance.value)"><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type=button value="270" onclick="position.moveSpacecraft(270,distance.value)">
                     <br>
                     <br>
+                    -->
                     <input type=button value="Use Sensors" onclick=deploySensor()> <!--Use Sensor Button calls deploySensor() -->
                 </form>
                 <div id="map"></div>
