Fixed dependency on deprecated getConfig() method.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <textarea readonly id="gazette" cols="40" rows="10"></textarea>
                 </div>
             </div>
-            <div class="page" id="configuration" oninput=validate() onclick=validate()>
+            <div class="page" id="configuration" oninput=validate(); onclick=validate()>
                 <h2> Properties and behavior </h2>
                 <form name="configurationSelectors">
                     <div class="coordinateField">
