Removed "Map" dependency on movement. Renamed "map.js" to mapClass.js temporarily until Jake and I collaborate on our Map implementation. Added preliminary work on Saving/Loading game state. Not functional.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <script src="js/addArtifact.js"></script>
         <script src="js/initializeMap.js"></script>
         <script src="js/loadOptions.js"></script>
-        <script src="js/map.js"></script>
+        <script src="js/mapClass.js"></script>
         <script src="js/Gazetteer.js"></script>
         <script src="js/switchIfChecked.js"></script>
         <script src="js/checkCollision.js"></script>
-        <script src="js/saveState.js"></script>
+        <script src="js/saveGame.js"></script>
+        <script src="js/loadGame.js"></script>
 
         <script src="js/main.js"></script>
 
