--- a/index.html
+++ b/index.html
@@ -31,33 +31,45 @@
                 </form>
             </div>
             <div class="page" id="mainGame" onload="initGame()">
-                <form id="UI" name=UI>
-                    STATUS
-                    <p>Current Location:
-                    X <input type=text name=xValue size=4>
-                    Y <input type=text name=yValue size=4>
-                    </p>
-                    <p></p>
-                    <p>Energy <input type=text name=energy size=4 onChange="resources.updateResources()">
-                    <p>Supplies <input type=text name=supplies size=4 onChange="resources.updateResources()">%
-                    <p>
-                    <hr>
-                    MAKE A MOVE
-                    <p>Distance <input type=text name=distance size=4>
-                    <p>
-                    <input type=button value="0" onclick="position.moveSpacecraft(0,distance.value)">
-                    <input type=button value="90" onclick="position.moveSpacecraft(90,distance.value)">
-                    <input type=button value="180" onclick="position.moveSpacecraft(180,distance.value)">
-                    <input type=button value="270" onclick="position.moveSpacecraft(270,distance.value)">
-                    <br>
-                    <br>
-                    <input type=button value="Use Sensors" onclick=deploySensor()> <!--Use Sensor Button calls deploySensor() -->
-                </form>
-                <div id="map"></div>
-                <!-- Log area where the user can see points on the map they have traveled to and/or used sensors on -->
-                <div id="logarea" align="center">
-                    <h2> Log </h2>
-                    <textarea readonly id="log" cols="100" rows="10"></textarea>
+                <div class="clearfix">
+                    <div class="col-1">
+                        <form id="UI" name=UI>
+                            <h2>STATUS</h2>
+                            <p>Coordinates:
+                            X <input type=text name=xValue size=4>
+                            Y <input type=text name=yValue size=4>
+                            </p>
+                            <p></p>
+                            <p>Energy <input type=text name=energy size=4 onChange="resources.updateResources()">
+                            <p>Supplies <input type=text name=supplies size=4 onChange="resources.updateResources()">%
+                            <p>
+                            <hr>
+                            MAKE A MOVE
+                            <p>Distance <input type=text name=distance size=4>
+                            <p>
+                            <input type=button value="0" onclick="position.moveSpacecraft(0,distance.value)">
+                            <input type=button value="90" onclick="position.moveSpacecraft(90,distance.value)">
+                            <input type=button value="180" onclick="position.moveSpacecraft(180,distance.value)">
+                            <input type=button value="270" onclick="position.moveSpacecraft(270,distance.value)">
+                            <br>
+                            <br>
+                            <input type=button value="Use Sensors" onclick=deploySensor()> <!--Use Sensor Button calls deploySensor() -->
+                        </form>
+                    </div>
+                    <div class="col-2">
+                        <div id="viewport">
+                            <div id="gameWorld">
+                                <img class="cellObject" id="player" src="img/letter_a.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <!-- Log area where the user can see points on the map they have traveled to and/or used sensors on -->
+                        <div id="logarea" align="center">
+                            <h2> LOG </h2>
+                            <textarea readonly id="log" cols="40" rows="40"></textarea>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="page" id="configuration" oninput=validate() onclick=validate()>
@@ -139,6 +151,28 @@
                 <h1>Game Over!</h1>
             </div>
         </div>
-    <!-- FOR MESSING AROUND ONLY -->
+    <script type="text/javascript">
+        var pxFromLeftSide = 0;
+        var pxFromTopSide = 0;
+        document.addEventListener('keydown', function(event) {
+          if (event.code == 'ArrowRight') {
+              pxFromLeftSide += 50;
+            document.getElementById("gameWorld").style.left = pxFromLeftSide + "px";
+          }
+          if (event.code == 'ArrowDown') {
+              pxFromTopSide += 50;
+            document.getElementById("gameWorld").style.top = pxFromTopSide + "px";
+          }
+          if (event.code == 'ArrowLeft') {
+              pxFromLeftSide -= 50;
+            document.getElementById("gameWorld").style.left = pxFromLeftSide + "px";
+          }
+          if (event.code == 'ArrowUp') {
+              pxFromTopSide -= 50;
+            document.getElementById("gameWorld").style.top = pxFromTopSide + "px";
+          }
+        });
+    </script>
+
     </body>
 </html>
